--- a/app/src/main/res/layout/item_doctor.xml
+++ b/app/src/main/res/layout/item_doctor.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/iv_avatar"
                     android:layout_width="72dp"
                     android:layout_height="72dp"
-                    android:src="@drawable/ic_person"
+                    android:src="@drawable/ic_input_user"
                     android:scaleType="centerCrop" />
 
                 <LinearLayout
