--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,5 +3,5 @@
     <item android:id="@+id/nav_antrian" android:title="Cek Antrian" android:icon="@drawable/ic_queue" />
     <item android:id="@+id/nav_jadwal" android:title="Jadwal Dokter" android:icon="@drawable/ic_calendar" />
     <item android:id="@+id/nav_riwayat" android:title="Riwayat Perawatan" android:icon="@drawable/ic_history" />
-    <item android:id="@+id/nav_profil" android:title="Profil" android:icon="@drawable/ic_person" />
+    <item android:id="@+id/nav_profil" android:title="Profil" android:icon="@drawable/ic_input_user" />
 </menu>
